--- a/src/components/Articles/Article.css
+++ b/src/components/Articles/Article.css
@@ -1,4 +1,4 @@
-.content-wrapper {
+/* .content-wrapper {
     margin-top: 25px;
 }
 
@@ -6,4 +6,4 @@
     .content-wrapper {
         margin-top: 250px;   
     }
-}
+} */
