--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,14 +1,14 @@
 .navbar {
   background-color: #060b26;
-  height: 80px;
+  height: 60px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
 .menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
+  padding: 1.5rem;
+  font-size: 1.5rem;
   background: none;
 }
 
@@ -31,7 +31,7 @@
 
 .nav-text {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 8px 0px 8px 16px;
   list-style: none;
@@ -61,9 +61,9 @@
 .navbar-toggle {
   background-color: #060b26;
   width: 100%;
-  height: 80px;
+  height: 60px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
